# UVgami

./: .gitignore  AGENTS.md  README.md  __init__.py  blender_manifest.toml  pyproject.toml
.github/scripts/: bundle-engines.sh
.github/workflows/: check-partuv-version.yml  check-version.yml  engine-build.yml  mirror-checkpoint.yml  partuv-build.yml  release.yml
bench/: download.py  metrics.py  run.py
docs/: docs.md  partuv-packaging.md
docs/agents/: bench-results.md  partuv-packaging.md
engine/optcuts/: .gitignore  CMakeLists.txt  LICENSE.txt
engine/optcuts/cmake/: Dependencies.cmake  DownloadExternal.cmake
engine/optcuts/src/: TriMesh.cpp  TriMesh.hpp  uvgami.cpp  uvgami.h
engine/optcuts/src/Energy/: SymDirichletEnergy.cpp
engine/optcuts/src/LinSysSolver/: EigenLibSolver.cpp  LinSysSolver.hpp
engine/optcuts/src/Utils/: IglUtils.cpp  IglUtils.hpp
engine/partuv/: .gitignore  CMakeLists.txt  LICENSE  bindings.cpp  pyproject.toml  vcpkg.json
engine/partuv/partuv/: __init__.py  cli.py  common.py  geometric.py  output.py  preprocess.py  wsl.py
engine/partuv/preprocess_utils/partfield_official/partfield/: model_trainer_pvcnn_only_demo.py
engine/partuv/src/: AgglomerativeClustering.cpp  AgglomerativeClustering.h  Component.cpp  Component.h  CuMeshSimplifier.cpp  CuMeshSimplifier.h  Distortion.cpp  Distortion.h  IO.cpp  IO.h  Pack.cpp  Pack.h  UnwrapAgg.cpp  UnwrapAgg.h  UnwrapBB.cpp  UnwrapBB.h  UnwrapMerge.cpp  UnwrapMerge.h  UnwrapOne.cpp  UnwrapOne.h  UnwrapPlane.cpp  UnwrapPlane.h  cusimp.cu  cusimp.h  merge.cpp  merge.h  pipeline.cpp  pipeline.h  stream_pool.cpp  stream_pool.h
engine/partuv/src/lscm/: CMakeLists.txt
engine/partuv/src/lscm/src/: LSCM.cpp  LSCM.h  Mesh.cpp  Mesh.h
engine/partuv/src/triangle_intersection/: CMakeLists.txt  triangleHelper.cpp  triangleHelper.hpp
engine/xatlas/: CMakeLists.txt  main.cpp
scripts/: build_extension.py
src/: batch.py  engines.py  handler.py  job.py  logger.py  manager.py  objfile.py  progress_bar.py  reroute_seams.py  unwrap.py  uv_transfer.py
src/engines/: __init__.py  optcuts.py  xatlas.py
src/engines/partuv/: __init__.py  install.py  paths.py
src/ops/: grid.py  guides.py  info.py  install.py  misc.py  start.py  stop.py  uv.py  viewer.py
src/ui/: panels.py  props.py
src/utils/: download.py  paths.py
tests/: conftest.py  test_batch.py  test_bench_metrics.py  test_cli.py  test_download.py  test_objfile.py  test_optcuts.py  test_partuv.py  test_partuv_native.py  test_partuv_output.py  test_uv_transfer.py  test_wsl.py
uvgami_cli/: _pytest_plugin.py  cli.py  common.py  optcuts.py  partuv.py  wsl.py
