[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.11", "numpy"]
build-backend = "scikit_build_core.build"

[project]
name = "partuv"
version = "0.1.2.2"
description = "UV unwrapping pipeline with pybind11 bindings and preprocessing utilities"
requires-python = ">=3.9"
authors = [{ name = "Zhaoning Wang" }]
# everything imported by the partuv.preprocess chain (partfield inference)
# torch 2.3 wheels are built against numpy 1.x, so numpy<2
dependencies = [
  "numpy<2",
  "trimesh==4.9.0",
  "scipy",
  "torch==2.3.0",
  "torch-scatter",
  "lightning==2.2",
  # lightning 2.2 imports pkg_resources; setuptools 81 removed it
  "setuptools<81",
  "h5py",
  "yacs",
  "pytz",
  "loguru",
  "psutil",
  "plyfile",
  "einops",
  "boto3",
  "networkx",
  "matplotlib",
  "joblib",
  "tqdm",
  "scikit-learn",
  "scikit-image",
]



[tool.scikit-build]
# persistent build dir so interrupted builds resume incrementally
build-dir = "build/{wheel_tag}"
sdist.include = [
  "extern/easy_profiler/lib/libeasy_profiler.so",
  "extern/easy_profiler/lib/cmake/easy_profiler/**",
]
build.verbose = true
ninja.make-fallback = true

wheel.packages = ["partuv", "preprocess_utils"]
